--- a/CSS/Selectors/index.html
+++ b/CSS/Selectors/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1 draggable="true">This is a Heading</h1>
-    <p draggable="true">THis is a Paragraph.</p>
-    <h2>This is a Second Heading</h2>
+    <div>
+      <h1 draggable="true">This is a Heading</h1>
+      <p draggable="true">THis is a Paragraph.</p>
+      <h2>This is a Second Heading</h2>
+    </div>
   </body>
 </html>
