--- a/Webpages/index.html
+++ b/Webpages/index.html
@@ -1,7 +1,10 @@
 <h1>Welcome to My Website!</h1>
-
-<img src="./assets/images/cat.png" />
-
-<h3><a href="./public/about.html">About US</a></h3>
+<!-- Add an image of yourself that links to the about page -->
+<a href="./public/about.html"
+  ><img src="./assets/images/cat.png" alt="cat"
+/></a>
 <hr />
 
+<!-- Add a link to your contact me page here -->
+<a href="./public/contact.html">Contact Me</a>
+<hr />
